inicio segundo Crud

--- a/app/src/main/res/layout/activity_alumno_modificar.xml
+++ b/app/src/main/res/layout/activity_alumno_modificar.xml
@@ -79,12 +79,14 @@
         android:id="@+id/editSexo"
         android:layout_width="200dp"
         android:layout_height="wrap_content" />
+
     <Button
+        android:id="@+id/btnActualizar"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:id="@+id/btnActualizar"
-        android:text="Actualizar"/>
+        android:onClick="actulizarAlumno"
+        android:text="Actualizar" />
 
 
 
