--- a/app/src/main/res/layout/activity_materia_eliminar.xml
+++ b/app/src/main/res/layout/activity_materia_eliminar.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context="ca14080.repasoparcial.MateriaEliminarActivity">
 
     <TextView
@@ -16,4 +18,21 @@
         android:text="Eliminar Materia"
         tools:layout_editor_absoluteX="151dp"
         tools:layout_editor_absoluteY="3dp" />
-</RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Codigo materia a eliminar"
+        android:paddingTop="15dp"/>
+
+    <EditText
+        android:id="@+id/edtCodigo"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="eliminarMateria"
+        android:text="Eliminar materia" />
+
+</LinearLayout>
