--- a/app/src/main/res/layout/activity_nota_eliminar.xml
+++ b/app/src/main/res/layout/activity_nota_eliminar.xml
@@ -1,18 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ca14080.repasoparcial.NotaEliminarActivity">
+    tools:context="ca14080.repasoparcial.NotaEliminarActivity"
+    android:stretchColumns="1"
+    android:paddingTop="4dip">
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="Eliminar Nota"
-        tools:layout_editor_absoluteX="163dp"
-        tools:layout_editor_absoluteY="0dp" />
-</RelativeLayout>
+    <TableRow >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="carnet"/>
+        <EditText
+            android:id="@+id/editC"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:maxLength="7"/>
+    </TableRow>
+
+    <TableRow>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="codigo materia "/>
+        <EditText
+            android:id="@+id/editCo"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:maxLength="6"/>
+    </TableRow>
+
+    <TableRow>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ciclo"/>
+        <EditText
+            android:id="@+id/editCi"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:maxLength="5"/>
+    </TableRow>
+
+    <TableRow>
+        <Button
+            android:layout_width="wrap_content"
+            android:text="eliminar"
+            android:onClick="eliminarNota"/>
+
+    </TableRow>
+
+
+
+</TableLayout>
